k8s/animal-kb-celery-worker-deployment-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "33"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"animal-kb-celery-worker","namespace":"animal-kb"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"animal-kb-celery","component":"worker"}},"template":{"metadata":{"labels":{"app":"animal-kb-celery","component":"worker"}},"spec":{"containers":[{"command":["celery","-A","celery_worker","worker","--loglevel=info","--concurrency=2"],"envFrom":[{"configMapRef":{"name":"animal-kb-config"}},{"secretRef":{"name [...]
  creationTimestamp: "2025-09-13T19:31:41Z"
  generation: 33
  name: animal-kb-celery-worker
  namespace: animal-kb
  resourceVersion: "270065"
  uid: b3c6138c-ae2b-4a4c-a12d-4e6b60adc0eb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: animal-kb-celery
      component: worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-10-09T03:27:31+05:30"
      creationTimestamp: null
      labels:
        app: animal-kb-celery
        component: worker
    spec:
      containers:
      - command:
        - celery
        - -A
        - celery_worker
        - worker
        - --loglevel=info
        - --concurrency=2
        image: rbdockerhuub/animal-kb-celery-worker:v4.7
        imagePullPolicy: IfNotPresent
        name: celery-worker
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-10-08T21:57:34Z"
    lastUpdateTime: "2025-10-08T21:57:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-10-06T20:33:22Z"
    lastUpdateTime: "2025-10-08T21:57:37Z"
    message: ReplicaSet "animal-kb-celery-worker-9b988f76c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 33
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
