k8s/70-celery-flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-kb-celery-flower
  namespace: animal-kb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animal-kb-celery
      component: flower
  template:
    metadata:
      labels:
        app: animal-kb-celery
        component: flower
    spec:
      containers:
        - name: celery-flower
          image: rbdockerhuub/animal-kb-celery-flower:v10.0
          ports:
            - containerPort: 5555
          command: ["celery"]
          args:
            - "-A"
            - "celery_worker"
            - "flower"
            - "--broker=redis://:${REDIS_PASSWORD}@redis:6379/0"
            - "--port=5555"
            - "--address=0.0.0.0"
          ports:
            - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: animal-kb-celery-flower
  namespace: animal-kb
spec:
  selector:
    app: animal-kb-celery
    component: flower
  ports:
    - port: 5555
      targetPort: 5555
  type: ClusterIP
