k8s/mongo-alias-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: animal-kb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
