k8s/80-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animal-kb-ingress
  namespace: animal-kb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: animal-kb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: animal-kb-api
            port:
              number: 80
